[package]
name = "vault-cli"
description = "Operator CLI for the Memory Vault. Dead-letter recovery + divergence triage. See BRD §5.2 / ADR-009 / T0.1.6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "vault-cli"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
vault-storage = { path = "../vault-storage" }
vault-app = { path = "../vault-app" }
# Consolidator report types — `consolidate run` subcommand prints
# ConsolidationReport fields (memories_processed / memories_merged /
# contradictions_resolved / summary_markdown). Added at T0.3.x Batch A
# (2026-05-26) per the locked-next-arc Step 4 wiring.
vault-consolidator = { path = "../vault-consolidator" }
# `env` feature added at T0.3.x Batch A for `consolidate run`'s
# `VAULT_*_PATH` env-var fallbacks (`#[arg(long, env = "...")]`).
# Workspace declaration carries `["derive"]`; this per-crate override
# merges in `"env"` so vault-cli has both features available.
clap = { workspace = true, features = ["env"] }
# `net` + `signal` added for the `daemon` subcommand: a loopback `TcpListener`
# + graceful Ctrl-C shutdown (ADR-SEC-001). macros + rt-multi-thread back
# `#[tokio::main]` as before.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
anyhow = { workspace = true }

# vault-mcp — the `daemon` subcommand mounts `vault_mcp::DaemonServer` (the
# per-agent-auth HTTP handler, ADR-SEC-001) over the real `VaultAdapter`.
vault-mcp = { path = "../vault-mcp" }
# rmcp streamable-HTTP server transport — the multi-agent daemon serves
# `DaemonServer` to many agents over localhost HTTP (vs `mcp serve`'s 1:1 stdio).
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server"] }
# hyper-util — hosts the rmcp `StreamableHttpService` (a tower service) on the
# loopback TCP listener. Exact-pinned to the in-tree version (no new crate).
hyper-util = { version = "=0.1.20", features = ["server-auto", "service", "tokio"] }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Sub-task (a) tests consume keychain test helpers (unique_test_namespace,
# cleanup_keychain_entry, keychain_test_guard, plant_malformed_keychain_entry,
# KEYCHAIN_TEST_MUTEX) promoted to `vault_app::keychain::test_helpers` at
# T0.2.0 Phase 3 sub-task (a). The `test-helpers` feature flips the module
# from `#[cfg(test)]`-private (in vault-app) to publicly visible for this
# downstream consumer's tests. Production dep above does NOT enable the
# feature — production binary builds with no test_helpers code compiled in.
vault-app = { path = "../vault-app", features = ["test-helpers"] }
