[package]
name = "vault-connectors"
description = "Auto-population from third-party services (Gmail, Calendar, etc.) via read-only OAuth, user-reviewed before commit. See BRD §5.9."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
