[package]
name = "vault-consolidator"
description = "Sleep cycle: nightly merge of duplicates, decay, contradiction resolution, and summarization. See BRD §5.6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
