[package]
name = "vault-consolidator"
description = "Sleep cycle: nightly merge of duplicates, decay, contradiction resolution, and summarization. See BRD §5.6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Workspace-internal: domain types + storage + embeddings + LLM.
vault-core = { path = "../vault-core" }
vault-storage = { path = "../vault-storage" }
# Production dep at T0.2.2 (Amendment 1, lean X, 2026-05-13): `Memory` rows
# loaded from `MetadataStore` have `embedding: None` (vectors live in LanceDB,
# not SQLite per metadata_store.rs:896). `find_candidate_clusters` re-embeds
# each memory's content via `EmbeddingProvider::embed` before NN-querying
# `VectorStore::search`. Determinism: bge-small-en-v1.5 under ONNX Runtime
# on CPU is deterministic at fp32 — IEEE-754 rounding bounds re-embed vs.
# stored-embed similarity at sub-1e-6 per coordinate, cosine invariant under
# such noise. See ADR-045 §c.
vault-embedding = { path = "../vault-embedding" }
# Production dep at T0.2.3 commit 1 (ADR-045 §f.5 forward-pointer
# fulfillment): `Consolidator.llm: Arc<dyn LlmProvider>` field per BRD §5.6
# line 897, plus `phases::merge::decide_merge` calls
# `LlmProvider::complete_json`. T0.2.2 had vault-llm as dev-only because
# Phase 1 clustering is geometry-only; T0.2.3 introduces Phase 2's LLM
# merge decisions which makes it load-bearing in production.
vault-llm = { path = "../vault-llm" }

# Async runtime + traits
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling per BRD §0.2 / §2.4. anyhow stays out of library code.
thiserror = { workspace = true }

# Timestamps for the `since: Option<DateTime<Utc>>` forward-compat parameter
# (T0.2.5 wires actual checkpoint values; T0.2.2 passes None for full-scan).
chrono = { workspace = true }

# Logging — `#[tracing::instrument]` on the public algorithm entrypoint.
tracing = { workspace = true }

# Serde for the synthetic-fixture JSON shape (clustering_acceptance_100.json).
# Production code does NOT serialise; only the fixture-build example + the
# acceptance integration test parse JSON. Kept in [dependencies] (not
# [dev-dependencies]) only because `Cluster` derives Serialize/Deserialize
# for downstream consumers (T0.2.3 may serialise clusters to disk for the
# consolidation REPORT.md audit trail per BRD §5.6 line 957).
serde = { workspace = true }
serde_json = { workspace = true }

# Production dep at T0.2.3 commit 1: `ConflictReview.conflict_id: Uuid` per
# BRD §5.6 line 921 (`Vec<ConflictReview>` field on `ConsolidationReport`).
# Stable identifier for the review queue across consolidation runs; tests
# also use uuid for deterministic MemoryId construction (`Uuid::from_u128(n)`)
# which is why the workspace dep was already in dev-deps below — promote to
# production now that ConflictReview makes it part of the public API.
uuid = { workspace = true }

[dev-dependencies]
# Re-declare vault-llm with the `test-utils` feature for test-only
# `MockLlmProvider` access. Cargo merges dev-deps onto deps at test-target
# build time; production builds get the no-feature production-dep entry
# above. `MockLlmProvider` is used by `phases::merge` Phase 2 unit tests
# (mock-LLM scenarios per the +5 floor) and any future consolidator tests
# that need a deterministic LLM substitute.
vault-llm = { path = "../vault-llm", features = ["test-utils"] }

# tempfile for in-memory LanceDB + MetadataStore fixtures in the acceptance
# integration test (T0.2.0 pattern: build StorageBackend against a tempdir).
tempfile = { workspace = true }

# anyhow allowed in example binaries per BRD §2.4 (library code uses
# thiserror + VaultConsolidatorError). The fixture-build binary at
# examples/build_clustering_fixture.rs uses anyhow's `Context` trait for
# stage-by-stage error reporting (mirror of vault-llm's spike-2 binary).
anyhow = { workspace = true }

# Logging in tests.
tracing-test = { workspace = true }
tracing-subscriber = { workspace = true }
