[package]
name = "vault-embedding"
description = "Embedding generation via bge-small-en-v1.5 on ONNX Runtime. See BRD §5.3."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }
ort = { workspace = true }
tokenizers = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
