[package]
name = "vault-embedding"
description = "Embedding generation via bge-small-en-v1.5 on ONNX Runtime. See BRD §5.3."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Test-verification helpers (e.g., mean-pool variant of `embed` for test 9's
# CLS-vs-mean comparison). Self-enabled for integration tests via the
# `[dev-dependencies]` circular self-reference below; production builds do
# NOT include the testing module.
testing = []

[dependencies]
vault-core = { path = "../vault-core" }
# `half` feature enables f16 logit extraction — the Qwen3-Reranker seq-cls
# model emits f16 logits. Pure-Rust, cross-platform (no CI-matrix risk).
ort = { workspace = true, features = ["half"] }
# f16 → f32 conversion of reranker logits (reranker.rs). Pinned to the version
# already resolved in the tree via ort.
half = "=2.7.1"
tokenizers = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
# Self-referential dev-dep enables the `testing` feature for integration
# tests in `tests/`. Without this, integration tests would have to be invoked
# with `cargo test --features testing`; with this, plain `cargo test` works
# and the `testing` feature is auto-enabled when building the test profile.
vault-embedding = { path = ".", features = ["testing"] }
