[package]
name = "vault-llm"
description = "Local LLM inference for Memory Vault — Phi-4-mini via llama.cpp. See BRD §5.5 / T0.2.1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }

# LLM inference (T0.2.1 spike-2 lock — 2026-05-13). Safe wrapper over llama.cpp;
# underlying `llama-cpp-sys-2` is unsafe FFI walled off behind this safe layer.
# `#![forbid(unsafe_code)]` cleanly applies here per BRD §2.7.
#
# Backend selection is **per-target-OS** at the bottom of this file via
# `[target.'cfg(...)'.dependencies]` blocks (T0.2.3 close, 2026-05-15 — see
# HANDOFF.md "V0.2 backend + tuning config locked" section and the empirical
# anchor at `crates/vault-retrieval/examples/t027b_qwen_7b_vulkan_results.md`).

# Async runtime + traits
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling — VaultLlmError lands in src/error.rs at commit 2 (Phase 2).
thiserror = { workspace = true }

# Serialization — JSON schema → GBNF grammar conversion + structured output.
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Model download + integrity verification (ADR-043, drafted at Phase 5).
# `reqwest` workspace dep has `stream` feature enabled at T0.2.1 spike-2 to
# support streaming SHA-256 hashing of the 2.49 GB Phi-4-mini GGUF without
# loading the whole file into memory.
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

# Per-target-OS llama-cpp-2 backend selection (T0.2.3 close, 2026-05-15).
# - macOS uses Metal (Apple-native GPU API, the only GPU path on Apple Silicon)
# - Windows + Linux use Vulkan (cross-platform; what t027b empirically validated)
# CPU fallback at runtime: if `n_gpu_layers > 0` in TuningConfig doesn't light
# up (no usable iGPU/dGPU), llama.cpp returns 0 offloaded layers and the same
# binary runs CPU-only. One binary per platform — no separate CPU-only profile.
#
# **Empirical validation gap (load-bearing honesty):** ONE configuration was
# empirically tested at t027b — Vulkan + Intel UHD Graphics + Windows 11 +
# i7-13620H. Linux + Vulkan uses the identical code path (low risk). Metal +
# macOS is an entirely different backend code path — UNTESTED; promotion of
# Mac latency claims gated on first Apple Silicon beta user OR a borrowed-Mac
# t027c-equivalent gauntlet pre-V0.2-launch.
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { workspace = true, features = ["metal"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
llama-cpp-2 = { workspace = true, features = ["vulkan"] }

[dev-dependencies]
# anyhow allowed in example binaries per BRD §2.4 (library code uses thiserror
# + VaultLlmError). The spike-2 binary at examples/phi4_load_and_json_spike.rs
# uses anyhow's `Context` trait for stage-by-stage error reporting.
anyhow = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }

[features]
# `test-utils` exposes `MockLlmProvider` to downstream crates' `[dev-dependencies]`
# so e.g. vault-consolidator (T0.2.3) test code can do
#   vault-llm = { path = "../vault-llm", features = ["test-utils"] }
# and substitute the mock for real `Phi4MiniProvider` in fast unit tests.
# Mirrors vault-storage's `test_helpers` pattern from T0.2.0 sub-task (a).
# Per iteration 2 design detail (b): the feature declaration lands alongside
# the symbol it gates (this commit) — NOT at crate-birth in commit 1.
test-utils = []
