[package]
name = "vault-mcp"
description = "MCP adapter layer + stdio server. Exposes the vault to AI agents via Model Context Protocol. See BRD §5.7 / T0.1.9_PLAN.md."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Async traits for the Adapter abstraction (memory_search / write / update / delete).
async-trait.workspace = true

# Tokio — rmcp's stdio transport runs on tokio I/O. Server lifecycle uses
# spawn + select for graceful shutdown.
tokio = { workspace = true }

# tracing — every tool call emits a structured `tracing::info!` event
# with `{tool, duration_ms, result, boundary_count}` per ADR-024 + plan §3.5.
tracing.workspace = true

# UUID parsing for `memory_update` / `memory_delete` tool params
# (the agent supplies the memory id as a string; we parse → MemoryId).
uuid = { workspace = true }

# Domain types: Boundary (mandatory auth-gate input per ADR-025),
# MemoryId, VaultError, VaultResult.
vault-core = { path = "../vault-core" }

# StorageBackend (Phase 2 wires write/update/delete handlers) +
# AuditEventType::McpToolInvoke (Phase 2 audit append per ADR-024).
vault-storage = { path = "../vault-storage" }

# Retriever trait (Phase 2 wires the search handler).
vault-retrieval = { path = "../vault-retrieval" }

# rmcp 1.5.0 — exact-pinned in workspace deps per ADR-026 (pinned 2026-04-16,
# one day after the OX Security April 15 RCE class disclosure). vault-mcp is
# a stdio SERVER — structurally not in the host-side threat surface per
# ADR-026 host-vs-server scope analysis.
#
# Features:
# - server (default): ServerHandler trait + tool dispatch.
# - macros (default): #[tool] / #[tool_router] / #[prompt] attribute macros.
# - transport-io: server-side stdio transport (rmcp::transport::stdio()).
# - transport-async-rw: generic async-read/write transport (used by the
#   `initialize` round-trip runtime-confirmation smoke test in Phase 1
#   to drive the server over a `tokio::io::duplex()` pair instead of
#   real stdin/stdout).
#
# **schemars usage (current state at T0.2.x):** typed tool param structs
# (`SearchToolParams`, `ReadToolParams`, `WriteToolParams`, `UpdateToolParams`,
# `DeleteToolParams` in `src/server.rs`) derive `schemars::JsonSchema` so
# rmcp's `#[tool]` macro can generate the JSON Schema 2020-12 input schema
# published in `tools/list`. `schemars` is consumed via `rmcp::schemars`
# (re-exported by rmcp's `server` feature) — do NOT add a separate
# `schemars` workspace dep. Verified at runtime by `examples/macro_spike.rs`.
#
# **History (preserved for audit trail):** at T0.1.9 Phase 1 (2026-04-30)
# schemars was deliberately excluded because rmcp 1.5.0's schemars feature
# pulls schemars 1.0 which required `chrono ^0.4.39`, conflicting with our
# then-pin `chrono = "=0.4.38"` per ADR-013. ADR-013 amendment (2026-05-01,
# `HANDOFF_V0.1_ARCHIVE.md` line 603) advanced chrono past the original
# blocker (currently `=0.4.44` per workspace `Cargo.toml`); typed-params
# migration landed at T0.1.9 Phase 2 via the macro_spike.rs contract
# verification. The previous "tracked in tech-debt" framing is therefore
# obsolete — this comment block replaces a 2026-04-30 description that
# silently rotted across T0.1.9 Phase 2 → T0.2.x. Updated 2026-05-22 at
# T0.2.7 Phase 5 Step 2 audit.
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "transport-async-rw"] }

# serde + serde_json — tool param/result types serialise via serde; rmcp's
# protocol layer handles the JSON-RPC envelope. Tool params are typed
# structs with `schemars::JsonSchema` derives (see rmcp note above).
serde = { workspace = true }
serde_json = { workspace = true }

# chrono — parse the optional `as_of` write param (ISO-8601 date or
# RFC-3339 timestamp) into the `DateTime<Utc>` that `NewMemory.valid_from`
# expects. Workspace-pinned (=0.4.44 per ADR-013 amendment); already in the
# tree via vault-core, so this adds no new transitive deps.
chrono = { workspace = true }

# http — the daemon handler (`DaemonServer`, ADR-SEC-001) reads the inbound
# request's `http::request::Parts` (the `Authorization: Bearer <token>` header)
# out of rmcp's `RequestContext` extensions to authenticate each agent. Pinned
# to the exact version already resolved in Cargo.lock (rmcp's http) — no new
# crate enters the tree.
http = "=1.4.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test.workspace = true
tempfile.workspace = true
# tracing-test — used by tool-call observability tests + the audit-append
# tests in Phase 2.
tracing-test.workspace = true
# rmcp `client` feature — Phase 2 Step 9 needs the client-side `ServiceExt::serve`
# impl to drive the JSON-RPC initialize round-trip in `tests/initialize_smoke.rs`
# (`impl ClientHandler for ()` lives in `rmcp::handler::client`, but the
# `ServiceExt::serve` method for the client role is gated behind this feature).
# Cargo unifies dev-dep features with the production `[dependencies]` entry at
# test-build time only — production builds remain `client`-feature-free.
#
# **Multi-agent daemon SPIKE (next-arc, 2026-06-23) — DEV-ONLY transport features.**
# `transport-streamable-http-server` + `transport-streamable-http-client-reqwest`
# back `tests/streamable_http_spike.rs`, the compile-and-run proof that two rmcp
# HTTP clients can talk to ONE localhost daemon concurrently. These are
# test-build-only; the production stdio server is unchanged. If the daemon
# graduates to production, the server feature moves to `[dependencies]` behind
# the architecture + ADR-SEC decision (BRD §11 re-read).
rmcp = { workspace = true, features = [
    "client",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
] }

# hyper-util — hosts the rmcp `StreamableHttpService` (a `tower::Service`) on a
# real loopback TCP port for the multi-agent daemon spike. Pinned to the exact
# version ALREADY resolved transitively in Cargo.lock (no new crate enters the
# tree, no lockfile churn) — chosen over axum so the spike adds zero new
# supply-chain surface per ADR-026's minimize-deps posture. Features:
# `server-auto` (HTTP/1+2 connection server), `service` (TowerToHyperService
# tower→hyper adapter), `tokio` (TokioIo/TokioExecutor runtime glue). Dev-only.
hyper-util = { version = "=0.1.20", features = ["server-auto", "service", "tokio"] }
