[package]
name = "vault-retrieval"
description = "Multi-strategy parallel retrieval (semantic, graph, temporal, keyword, frequency) with reranking. See BRD §5.5."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Trait shape for async Retriever + EmbeddingProvider consumption.
async-trait.workspace = true

# tracing — every retrieve() is #[instrument]-ed AND emits a structured
# `tracing::info!(target: "vault_retrieval::query", ...)` event at the
# end of the pipeline. T0.1.9 §6 moved audit accounting up to vault-mcp;
# this crate emits operational logging only.
tracing.workspace = true

# serde — `RetrievedMemory` derives `Serialize` so vault-mcp's
# `memory.search` tool (T0.1.9 Phase 2) can serialise the wire response
# directly. Memory (vault-core) is already Serialize; this carries the
# wire-friendliness through to the retrieval result type.
serde = { workspace = true }

# Domain types: Memory, Boundary, MemoryId, VaultError, VaultResult.
vault-core = { path = "../vault-core" }

# MetadataStore (memory hydration via get_memories_batch),
# VectorStore (k-NN search). T0.1.9 §6 dropped audit-primitive imports
# from this crate — vault-storage is consumed only for hydration + the
# vector-search trait now, not for `PendingAuditEvent` / `AuditEventType`.
vault-storage = { path = "../vault-storage" }

# EmbeddingProvider trait + EMBEDDING_DIM constant.
vault-embedding = { path = "../vault-embedding" }

# T0.1.9 §6 audit-removal sub-phase: chrono dropped (was wired in T0.1.8
# Phase 1 for measuring latency_ms inside the audit-append builder; we
# now measure with `std::time::Instant` only inside `retrieve()`, no
# chrono needed). serde_json moved to dev-deps (only used by
# `serde_json::json!` in test-only `make_memory()` helpers — production
# pipeline no longer builds JSON at this layer).

[dev-dependencies]
# vault-storage as a dev-dep (no special features). Sub-task (d) of
# T0.2.0 Phase 3 (2026-05-12) migrated vault-retrieval's test surfaces
# (`tests/common/mod.rs:103` + `src/strategies/semantic.rs:354`) from
# plaintext `LanceVectorStore::open` to sealed
# `open_with_at_rest_key` + a `TEST_AT_REST_KEY` const. The
# `v0_1_migration` feature activation that previously lived here is
# no longer needed since no test consumes plaintext open.
vault-storage = { path = "../vault-storage" }
tokio = { workspace = true }
tokio-test.workspace = true
proptest.workspace = true
tempfile.workspace = true
# serde_json — used only by test helpers (`make_memory` builds an empty
# metadata JSON object). T0.1.9 §6 moved this from production deps to
# dev-deps when audit append moved to vault-mcp.
serde_json.workspace = true
# tracing-test — used by:
# - tests/retrieval_tests.rs::adversarial_deleted_but_not_purged_memory
#   (T0.1.8 Phase 3) to verify the cross-crate `warn!` from
#   get_memories_batch's orphan-id branch fires.
# - T0.1.9 §6 audit-removal tests (semantic.rs::tests + retrieval_tests.rs)
#   to verify `tracing::info!` emission carries the diagnostic shape.
tracing-test.workspace = true
