[package]
name = "vault-retrieval"
description = "Multi-strategy parallel retrieval (semantic, graph, temporal, keyword, frequency) with reranking. See BRD §5.5."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Trait shape for async Retriever + EmbeddingProvider consumption.
async-trait.workspace = true

# tracing — every retrieve() is #[instrument]-ed AND emits a structured
# `tracing::info!(target: "vault_retrieval::query", ...)` event at the
# end of the pipeline. T0.1.9 §6 moved audit accounting up to vault-mcp;
# this crate emits operational logging only.
tracing.workspace = true

# serde — `RetrievedMemory` derives `Serialize` so vault-mcp's
# `memory.search` tool (T0.1.9 Phase 2) can serialise the wire response
# directly. Memory (vault-core) is already Serialize; this carries the
# wire-friendliness through to the retrieval result type.
serde = { workspace = true }

# Domain types: Memory, Boundary, MemoryId, VaultError, VaultResult.
vault-core = { path = "../vault-core" }

# MetadataStore (memory hydration via get_memories_batch),
# VectorStore (k-NN search). T0.1.9 §6 dropped audit-primitive imports
# from this crate — vault-storage is consumed only for hydration + the
# vector-search trait now, not for `PendingAuditEvent` / `AuditEventType`.
vault-storage = { path = "../vault-storage" }

# EmbeddingProvider trait + EMBEDDING_DIM constant.
vault-embedding = { path = "../vault-embedding" }

# LlmProvider trait + CompletionParams consumed by the read-time pipeline
# (`src/read_pipeline.rs`) — ADR-048 (T0.2.3 close, 2026-05-15). Production
# dep, not dev-dep: ReadPipeline is the V0.2 read contract surface.
# llama-cpp-2 backend selection happens in vault-llm's Cargo.toml via
# per-target features (Metal on macOS, Vulkan on Windows/Linux); this
# crate stays platform-agnostic.
vault-llm = { path = "../vault-llm" }

# serde_json — used in production by read_pipeline.rs to deserialise the
# LLM's GBNF-constrained synthesis output. T0.1.9 §6 originally moved
# this to dev-deps when the prior plaintext audit-append path was removed;
# T0.2.3 close re-adds it as a production dep for read-pipeline parsing.
serde_json = { workspace = true }

# tantivy — BM25 full-text-search engine backing `strategies::keyword`
# (`KeywordIndex` + `KeywordRetriever`). Promoted from dev-dep to
# production at T0.2.7 Phase 1 (2026-05-20) after the Phase 0.b spike
# (`examples/t028g_hybrid_retrieval_spike.rs`) validated the hybrid
# BGE-dense + Tantivy-BM25 + RRF architecture at SCALE=10K (9/9 retrieval,
# 9/9 structured contradictions under the refined verdict criterion).
# Version pinned per BRD §2.9; 0.26.1 is the same version exercised by
# the spike — no version drift.
tantivy = "=0.26.1"

# tokio — `KeywordIndex` uses `tokio::sync::Mutex<IndexWriter>` to
# serialise writes against the single-writer Tantivy contract. Read
# paths are concurrent (the underlying `IndexReader` is `Send + Sync`).
# Promoted from dev-dep to production at T0.2.7 Phase 1 (2026-05-20).
# Workspace pins `features = ["full"]`; the dev-dep entry below is now
# redundant but kept to avoid Cargo.lock churn.
tokio.workspace = true

# chrono — re-added to production deps at T0.2.7 Phase B (ADR-051,
# 2026-05-24): `semantic.rs` and `keyword.rs` filter `m.is_expired_at(Utc::now())`
# on every retrieve() to skip memories whose bi-temporal `valid_until` has
# passed. Was dropped at T0.1.9 §6 audit-removal sub-phase (latency now
# measured via `std::time::Instant`); the bi-temporal retrieval filter
# brings it back as the wall-clock provider for the expiration predicate.
chrono.workspace = true

# serde_json moved to dev-deps was reversed at T0.2.3 close (line 51) for
# read_pipeline.rs JSON parsing.

[dev-dependencies]
# vault-storage as a dev-dep (no special features). Sub-task (d) of
# T0.2.0 Phase 3 (2026-05-12) migrated vault-retrieval's test surfaces
# (`tests/common/mod.rs:103` + `src/strategies/semantic.rs:354`) from
# plaintext `LanceVectorStore::open` to sealed
# `open_with_at_rest_key` + a `TEST_AT_REST_KEY` const. The
# `v0_1_migration` feature activation that previously lived here is
# no longer needed since no test consumes plaintext open.
vault-storage = { path = "../vault-storage" }
tokio = { workspace = true }
tokio-test.workspace = true
proptest.workspace = true
tempfile.workspace = true
# serde_json — production dep above carries through to dev-builds, so
# the prior dev-dep line was redundant after T0.2.3 close. Test helpers
# (`make_memory` building empty metadata JSON) consume the production
# import; no separate dev-dep needed.
# anyhow for the T0.2.3 retrieval-diagnostic spike at
# examples/t023_retrieval_diagnostic_spike.rs. anyhow per BRD §2.4 is
# allowed in example/spike binaries (library code uses thiserror +
# VaultError). chrono was previously listed here for the same spike's
# markdown audit-trail header rendering, but at T0.2.7 Phase B (ADR-051)
# chrono moved to production deps above (Utc::now() in retrieval filters);
# the dev-dep entry was removed as redundant — production deps carry
# through to dev-builds.
anyhow = { workspace = true }
# vault-llm with `test-utils` feature for `MockLlmProvider` in
# read-pipeline unit tests (`src/read_pipeline.rs::tests`) — the
# production import above carries through to dev-builds, and adding
# `features = ["test-utils"]` here enables the mock for dev-only.
# Mirrors vault-storage's `test_helpers` pattern from T0.2.0 sub-task (a).
vault-llm = { path = "../vault-llm", features = ["test-utils"] }
# tracing-test — used by:
# - tests/retrieval_tests.rs::adversarial_deleted_but_not_purged_memory
#   (T0.1.8 Phase 3) to verify the cross-crate `warn!` from
#   get_memories_batch's orphan-id branch fires.
# - T0.1.9 §6 audit-removal tests (semantic.rs::tests + retrieval_tests.rs)
#   to verify `tracing::info!` emission carries the diagnostic shape.
tracing-test.workspace = true

# NOTE: tantivy was previously a [dev-dependencies] entry (T0.2.7 Phase 0
# hybrid retrieval spike). At Phase 1 (2026-05-20) it was promoted to
# production deps above (`KeywordIndex` + `KeywordRetriever`); the dev-
# dep entry was removed as redundant. The Phase 0 spike example
# (`examples/t028g_hybrid_retrieval_spike.rs`) still compiles and runs
# via the production dep.
