[package]
name = "vault-storage"
description = "Persistent storage across LanceDB (vectors), DuckDB (graph), and SQLite/SQLCipher (metadata). See BRD §5.2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../vault-core" }
rusqlite = { workspace = true }
# LanceDB vector store (T0.1.4). lancedb re-exports arrow_schema; arrow-array
# is needed directly for RecordBatch, RecordBatchIterator, Float32Array,
# FixedSizeListArray. Versions pinned in workspace Cargo.toml.
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
# DuckDB graph store (T0.1.5). Pinned in workspace Cargo.toml. `bundled`
# avoids requiring a system DuckDB install. Connection: Send + !Sync — same
# shape as rusqlite, wrapped in Mutex<Connection> + spawn_blocking.
duckdb = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
# tracing-test — T0.1.10 Phase 3b: thread-local subscriber that captures
# `tracing` events emitted during a test. Used to pin ADR-010
# compensating-control #3 (the plaintext-on-disk WARN logs) against
# regression. Closes the T0.1.4 test gap that ADR-010 line 539
# specified ("assert the WARN log fires on every open") but wasn't
# implemented at T0.1.4. `no-env-filter` feature already configured in
# workspace deps.
tracing-test = { workspace = true }
# T0.2.0 Phase 0c — at-rest spike v2 dev-deps. Re-added at lancedb
# 0.27.2's resolved transitive versions (verified 2026-05-08 via
# `cargo tree -p lancedb`). Spike-local only; promotion to
# [workspace.dependencies] happens at Phase 0d when production code
# consumes them. Versions match Cargo.lock pre-flight snapshot
# captured in at_rest_spike.rs's top-of-file comment.
lance-io = "=4.0.0"
lance-core = "=4.0.0"
object_store = "=0.12.5"
dryoc = { workspace = true }
bytes = "=1.11.1"
url = "=2.5.8"
walkdir = "=2.5.0"
